[project]
name = "tool-jose-db"
version = "0.1.0"
description = ""
authors = [
    {name = "Alessandra",email = "alessandra3665@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "progress (>=1.6,<2.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "pdfminer-six (>=20250506,<20250507)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
